fix: extend redirect button width to avoid text overlap.

--- a/src/components/RedirectButton/index.less
+++ b/src/components/RedirectButton/index.less
@@ -8,7 +8,7 @@
   box-sizing: border-box;
   display: inline-block;
   width: fit-content;
-  min-width: 100px;
+  min-width: 120px;
   height: 45px;
   text-wrap: nowrap;
   cursor: pointer;
